@@ -29,7 +29,6 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -118,6 +117,7 @@ extra/
 .pypirc
 fastflix/CHANGES
 *.exe
+FastFlix.spec
 
 icons.py
 test.html
