@@ -14,6 +14,7 @@
 * Changing so it opens the file dialog for new video to last used directory
 * Fixing #116 how HDR10 options for x265 work (thanks to HannesJo0139)
 * Fixing thumbnails not being generated properly on 10-bit non bt2020 files
+* Fixing QThread destoryed message on close
 
 ## Version  3.4.3
 
